Cleaning up, adding solutions file

--- a/apache-beam-lab.ipynb
+++ b/apache-beam-lab.ipynb
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "R_Yhoc6N_Flg"
    },
    "outputs": [],
    "source": [
     "# Install apache-beam with pip.\n",
-    "!pip install --quiet apache-beam pandas"
+    "!pip install --quiet apache-beam[interactive] pandas"
    ]
   },
   {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -254,15 +254,7 @@
     "id": "IblMlbE8_4CJ",
     "outputId": "dc825083-d157-4fae-fff9-4db33dbc0876"
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0\n1\n2\n3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -289,17 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Lorem\nIpsum\nis\nsimply\ndummy\ntext\nof\nthe\nprinting\nand\ntypesetting\nindustry.\nLorem\nIpsum\nhas\nbeen\nthe\nindustry's\nstandard\ndummy\ntext\never\nsince\nthe\n1500s,\nwhen\nan\nunknown\nprinter\ntook\na\ngalley\nof\ntype\nand\nscrambled\nit\nto\nmake\na\ntype\nspecimen\nbook.\nIt\nhas\nsurvived\nnot\nonly\nfive\ncenturies,\nbut\nalso\nthe\nleap\ninto\nelectronic\ntypesetting,\nremaining\nessentially\nunchanged.\nIt\nwas\npopularised\nin\nthe\n1960s\nwith\nthe\nrelease\nof\nLetraset\nsheets\ncontaining\nLorem\nIpsum\npassages,\nand\nmore\nrecently\nwith\ndesktop\npublishing\nsoftware\nlike\nAldus\nPageMaker\nincluding\nversions\nof\nLorem\nIpsum.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -308,7 +292,7 @@
     "with beam.Pipeline() as pipeline:\n",
     "  outputs = (\n",
     "      pipeline\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "  )\n",
     "\n",
     "  outputs | beam.Map(print) "
@@ -383,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -391,18 +375,7 @@
     "id": "LoYq871Q96iu",
     "outputId": "57c2155f-cebb-42ae-e175-e1554f2f806b"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -424,22 +397,14 @@
    "source": [
     "# Exercise 2\n",
     "\n",
-    "Print words uppercased"
+    "Print words uppercased. Use standard string function upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "LOREM\nIPSUM\nIS\nSIMPLY\nDUMMY\nTEXT\nOF\nTHE\nPRINTING\nAND\nTYPESETTING\nINDUSTRY.\nLOREM\nIPSUM\nHAS\nBEEN\nTHE\nINDUSTRY'S\nSTANDARD\nDUMMY\nTEXT\nEVER\nSINCE\nTHE\n1500S,\nWHEN\nAN\nUNKNOWN\nPRINTER\nTOOK\nA\nGALLEY\nOF\nTYPE\nAND\nSCRAMBLED\nIT\nTO\nMAKE\nA\nTYPE\nSPECIMEN\nBOOK.\nIT\nHAS\nSURVIVED\nNOT\nONLY\nFIVE\nCENTURIES,\nBUT\nALSO\nTHE\nLEAP\nINTO\nELECTRONIC\nTYPESETTING,\nREMAINING\nESSENTIALLY\nUNCHANGED.\nIT\nWAS\nPOPULARISED\nIN\nTHE\n1960S\nWITH\nTHE\nRELEASE\nOF\nLETRASET\nSHEETS\nCONTAINING\nLOREM\nIPSUM\nPASSAGES,\nAND\nMORE\nRECENTLY\nWITH\nDESKTOP\nPUBLISHING\nSOFTWARE\nLIKE\nALDUS\nPAGEMAKER\nINCLUDING\nVERSIONS\nOF\nLOREM\nIPSUM.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -449,7 +414,7 @@
     "  outputs = (\n",
     "      pipeline\n",
     "      | 'Create initial values' >> beam.Create(words_list)\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "  )\n",
     "\n",
     "  outputs | beam.Map(print)\n"
@@ -516,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -524,20 +489,7 @@
     "id": "gZbsyAWaMT-F",
     "outputId": "f2623c5c-d709-4229-c293-952b9bbcbef4"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -572,17 +524,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Lorem\nLorem\nIpsum\nIpsum\nis\nsimply\ndummy\ntext\nof\nthe\nprinting\nand\ntypesetting\nindustry.\nLorem\nLorem\nIpsum\nIpsum\nhas\nbeen\nthe\nindustry's\nstandard\ndummy\ntext\never\nsince\nthe\n1500s,\nwhen\nan\nunknown\nprinter\ntook\na\ngalley\nof\ntype\nand\nscrambled\nit\nto\nmake\na\ntype\nspecimen\nbook.\nIt\nIt\nhas\nsurvived\nnot\nonly\nfive\ncenturies,\nbut\nalso\nthe\nleap\ninto\nelectronic\ntypesetting,\nremaining\nessentially\nunchanged.\nIt\nIt\nwas\npopularised\nin\nthe\n1960s\nwith\nthe\nrelease\nof\nLetraset\nLetraset\nsheets\ncontaining\nLorem\nLorem\nIpsum\nIpsum\npassages,\nand\nmore\nrecently\nwith\ndesktop\npublishing\nsoftware\nlike\nAldus\nAldus\nPageMaker\nPageMaker\nincluding\nversions\nof\nLorem\nLorem\nIpsum.\nIpsum.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -595,7 +539,7 @@
     "  outputs = (\n",
     "      pipeline\n",
     "      | 'Create initial values' >> beam.Create(words_list)\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "  )\n",
     "\n",
     "  outputs | beam.Map(print)\n"
@@ -656,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -664,16 +608,7 @@
     "id": "l7W9UafLkiO1",
     "outputId": "a59e0cb0-3cb9-43a6-8043-5789380d938c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -699,22 +634,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Lorem\nIpsum\nsimply\ndummy\ntext\nthe\nprinting\ntypesetting\nLorem\nIpsum\nhas\nbeen\nthe\nstandard\ndummy\ntext\nsince\nthe\n1500s,\nwhen\nprinter\ntook\ngalley\ntype\nscrambled\nto\nmake\ntype\nspecimen\nbook.\nIt\nhas\nsurvived\nnot\nfive\ncenturies,\nbut\nthe\nleap\ntypesetting,\nremaining\nIt\nwas\npopularised\nthe\n1960s\nwith\nthe\nrelease\nLetraset\nsheets\ncontaining\nLorem\nIpsum\npassages,\nmore\nrecently\nwith\ndesktop\npublishing\nsoftware\nlike\nAldus\nPageMaker\nversions\nLorem\nIpsum.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
     "def starts_with_vowel(word):\n",
-    "    return 'aoieu'.find(word[0])!=-1\n",
+    "    return 'aoieu'.find(word[0].lower())!=-1\n",
     "\n",
     "words_list = get_words_from_file()\n",
     "\n",
@@ -722,7 +649,7 @@
     "  outputs = (\n",
     "      pipeline\n",
     "      | 'Create initial values' >> beam.Create(words_list)\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "  )\n",
     "\n",
     "  outputs | beam.Map(print)\n"
@@ -733,7 +660,6 @@
     "Expected:<br/>\n",
     "<br/>\n",
     "Lorem<br/>\n",
-    "Ipsum<br/>\n",
     "simply<br/>\n",
     "dummy<br/>\n",
     "text<br/>\n",
@@ -792,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -800,15 +726,7 @@
     "id": "PoRd7hlnoOu5",
     "outputId": "b34f987f-ddb3-4808-95eb-9ac6140d2ea2"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -829,22 +747,15 @@
    "metadata": {},
    "source": [
     "# Exercise 5\n",
-    "Count all the vowels in words from a list"
+    "Count all the vowels in words from a list.<br/>\n",
+    "HINT: First, use Map to transform PCollection of words to PCollection of numbers, then sum them up. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "168\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -858,7 +769,7 @@
     "  outputs = (\n",
     "      pipeline\n",
     "      | 'Create values' >> beam.Create(words_list)\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "  )\n",
     "\n",
     "  outputs | beam.Map(print)"
@@ -912,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -920,17 +831,7 @@
     "id": "67fZUiWiwnAf",
     "outputId": "f95c455c-c554-41de-bc8c-e755584064d2"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('🐹', ['🌽', '🌰'])\n",
-      "('🐼', ['🎋'])\n",
-      "('🐰', ['🥕', '🥒'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
@@ -957,33 +858,25 @@
    "metadata": {},
    "source": [
     "# Exercise 6\n",
-    "Group words by their first letter ignoring the case"
+    "Group words by their first letter ignoring the case<br/>\n",
+    "HINT: Use Map to create PCollection of tuples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "('l', ['Lorem', 'Lorem', 'leap', 'Letraset', 'Lorem', 'like', 'Lorem'])\n('i', ['Ipsum', 'is', 'industry.', 'Ipsum', \"industry's\", 'it', 'It', 'into', 'It', 'in', 'Ipsum', 'including', 'Ipsum.'])\n('s', ['simply', 'standard', 'since', 'scrambled', 'specimen', 'survived', 'sheets', 'software'])\n('d', ['dummy', 'dummy', 'desktop'])\n('t', ['text', 'the', 'typesetting', 'the', 'text', 'the', 'took', 'type', 'to', 'type', 'the', 'typesetting,', 'the', 'the'])\n('o', ['of', 'of', 'only', 'of', 'of'])\n('p', ['printing', 'printer', 'popularised', 'passages,', 'publishing', 'PageMaker'])\n('a', ['and', 'an', 'a', 'and', 'a', 'also', 'and', 'Aldus'])\n('h', ['has', 'has'])\n('b', ['been', 'book.', 'but'])\n('e', ['ever', 'electronic', 'essentially'])\n('1', ['1500s,', '1960s'])\n('w', ['when', 'was', 'with', 'with'])\n('u', ['unknown', 'unchanged.'])\n('g', ['galley'])\n('m', ['make', 'more'])\n('n', ['not'])\n('f', ['five'])\n('c', ['centuries,', 'containing'])\n('r', ['remaining', 'release', 'recently'])\n('v', ['versions'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "\n",
     "words_list = get_words_from_file()\n",
     "\n",
-    "# Create Pipeline, use Map to create PCollection of tuples\n",
     "with beam.Pipeline() as pipeline:\n",
     "  outputs = (\n",
     "      pipeline\n",
     "      | 'Create values' >> beam.Create(words_list)\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "  )\n",
     "\n",
     "  outputs | beam.Map(print)\n"
@@ -1007,22 +900,15 @@
    "metadata": {},
    "source": [
     "# Exercise 7\n",
-    "Find the longest word for each starting letter"
+    "Find the longest word for each starting letter<br/>\n",
+    "HINT: use select_longest helper function below and CombinePerKey transform"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "('l', 'Letraset')\n('i', \"industry's\")\n('s', 'scrambled')\n('d', 'desktop')\n('t', 'typesetting,')\n('o', 'only')\n('p', 'popularised')\n('a', 'Aldus')\n('h', 'has')\n('b', 'book.')\n('e', 'essentially')\n('1', '1500s,')\n('w', 'when')\n('u', 'unchanged.')\n('g', 'galley')\n('m', 'make')\n('n', 'not')\n('f', 'five')\n('c', 'centuries,')\n('r', 'remaining')\n('v', 'versions')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import apache_beam as beam\n",
     "from itertools import islice\n",
@@ -1033,12 +919,11 @@
     "words_list = get_words_from_file()\n",
     "\n",
     "\n",
-    "# Create Pipeline, use select_longest above and CombinePerKey transform\n",
     "with beam.Pipeline() as pipeline:\n",
     "  outputs = (\n",
     "      pipeline\n",
     "      | 'Create values' >> beam.Create(words_list)\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "  )\n",
     "\n",
     "  outputs | beam.Map(print)\n"
@@ -1067,32 +952,18 @@
    "source": [
     "# Exercise 8 - Word count\n",
     "\n",
-    "The following example is the \"Hello, World!\" of data processing, a basic implementation of word count. We're creating a simple data processing pipeline that reads a text file and counts the number of occurrences of every word.\n",
+    "Implement a data processing pipeline that reads a text file and counts the number of occurrences of every word.\n",
     "\n",
-    "There are many scenarios where all the data does not fit in memory. Notice that the outputs of the pipeline go to the file system, which allows for large processing jobs in distributed environments."
+    "There are many scenarios where all the data does not fit in memory. Notice that the outputs of the pipeline go to the file system, which allows for large processing jobs in distributed environments.\n",
+    "\n",
+    "First, fetch the text:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      ">> mkdir -p data\n",
-      "\n",
-      ">> gsutil cp gs://dataflow-samples/shakespeare/kinglear.txt data/\n",
-      "\n",
-      "Copying gs://dataflow-samples/shakespeare/kinglear.txt...\n",
-      "/ [0 files][    0.0 B/153.6 KiB]                                                \n",
-      "/ [1 files][153.6 KiB/153.6 KiB]                                                \n",
-      "\n",
-      "Operation completed over 1 objects/153.6 KiB.                                    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Copy the input file into the local file system.\n",
     "run('mkdir -p data')\n",
@@ -1101,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -1120,18 +991,15 @@
     "\n",
     "# Running locally in the DirectRunner.\n",
     "with beam.Pipeline() as pipeline:\n",
-    "  # Store the word counts in a PCollection.\n",
-    "  # Make each element a tuple of (word, count) of types (str, int).\n",
     "  word_counts = (\n",
-    "      # The input PCollection is an empty pipeline.\n",
     "      pipeline\n",
     "      | 'Read lines' >> beam.io.ReadFromText(inputs_pattern)\n",
-    "      # YOUR CODE GOES HERE\n",
+    "      # YOUR CODE HERE\n",
     "     \n",
-    "      # split into individual words\n",
-    "      # pair each word into a tuple with 1\n",
-    "      # group and sum \n",
-    "     \n",
+    "      # 1. Split into individual words using FlatMap\n",
+    "      # 2. Pair each word into a tuple with 1 using Map. Make each element a tuple of (word, count) of types (str, int).\n",
+    "      # 3. Group and sum using CombinePerKey\n",
+    "\n",
     "      | 'Format results' >> beam.Map(lambda word_count: str(word_count))\n",
     "      | 'Write results' >> beam.io.WriteToText(outputs_prefix)\n",
     "  )"
@@ -1143,43 +1011,6 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Solution:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import apache_beam as beam\n",
-    "import re\n",
-    "import shutil\n",
-    "\n",
-    "inputs_pattern = 'data/kinglear.txt'\n",
-    "outputs_prefix = 'outputs/part'\n",
-    "shutil.rmtree('outputs',ignore_errors=True)\n",
-    "\n",
-    "# Running locally in the DirectRunner.\n",
-    "with beam.Pipeline() as pipeline:\n",
-    "  (\n",
-    "      pipeline\n",
-    "      | 'Read lines' >> beam.io.ReadFromText(inputs_pattern)\n",
-    "      | 'Find words' >> beam.FlatMap(lambda line: re.findall(r\"[a-zA-Z']+\", line))\n",
-    "      | 'Pair words with 1' >> beam.Map(lambda word: (word, 1))\n",
-    "      | 'Group and sum' >> beam.CombinePerKey(sum)\n",
-    "      | 'Format results' >> beam.Map(lambda word_count: str(word_count))\n",
-    "      | 'Write results' >> beam.io.WriteToText(outputs_prefix)\n",
-    "  )\n",
-    "\n"
-   ]
   }
  ],
  "metadata": {
